@@ -5,3 +5,4 @@
   it goes bezerk.  It works fine on Rainette.  Go figure!
 
 - Write documentation.
+- Use UNAME to set OS.
